@@ -1,4 +1,5 @@
 0.1-81
+- drop processing.log.append() for the leaner processing.log.add()
 - plot.ctd(): add more plot types (and re-used which=9 for salinity, not density)
 - as.ctd(): improve flexibilty
 - predict.tidem(): add 'newdata' argument
